--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "fs-extra": "^11.2.0",
+    "path": "^0.12.7",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
