--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:exports": "node generate-exports.js"
   },
   "dependencies": {
     "fs-extra": "^11.2.0",
