--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "dev": "vite",
     "preview": "vite preview",
-    "build": "vite build",
     "deploy": "npm run build && rm -rf docs && mv dist docs && git add . && git commit -m 'Deploy site to GitHub Pages from docs folder' && git push origin main"
   },
   "dependencies": {
@@ -19,7 +18,6 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
     "gh-pages": "^6.2.0",
-    "vite": "^5.4.10",
-    "vite-plugin-gh-pages": "^1.0.0"
+    "vite": "^5.4.10"
   }
 }
