--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-	 "preview": "vite preview",
+    "preview": "vite preview",
     "deploy": "npm run build && rm -rf docs && mv dist docs && git add . && git commit -m 'Deploy site to GitHub Pages from docs folder' && git push origin main"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^4.0.0",
     "vite": "^5.4.10"
   }
 }
