--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.20",
+    "depcheck": "^1.4.7",
     "postcss": "^8.4.49",
     "postcss-nested": "^7.0.2",
     "unplugin-vue-components": "^0.27.4",
