--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "npm run build && rm -rf docs && mv dist docs && git add . && git commit -m 'Deploy site to GitHub Pages from docs folder' && git push origin main"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "fs-extra": "^11.2.0",
     "path": "^0.12.7",
     "vue": "^3.5.13",
