--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "depcheck": "^1.4.7",
     "postcss": "^8.4.49",
     "postcss-nested": "^7.0.2",
+    "rimraf": "^6.0.1",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.10"
   }
