--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https:///ntp-md.github.io/Mod-Vite",
+  "homepage": "https://ntp-md.github.io/Mod-Vite",
   "name": "mod-vite",
   "private": true,
   "version": "0.0.0",
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && rm -rf docs && mv dist docs && git add . && git commit -m 'Deploy site to GitHub Pages from docs folder' && git push origin main",
+    "deploy": "npm run build && gh-pages -d dist",
     "build-and-sync": "npm run build && npm run sync"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.20",
     "depcheck": "^1.4.7",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.49",
     "postcss-nested": "^7.0.2",
     "rimraf": "^6.0.1",
