--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "deploy": "npm run build && npm run deploy:move",
-    "deploy:move": "cp -r dist/* . && git add . && git commit -m 'Deploy to GitHub Pages' && git push origin main",
-    "build-and-sync": "npm run build && npm run sync"
+    "deploy:move": "cp -r dist/* . && git add . && git commit -m 'Deploy to GitHub Pages' && git push origin main"
   },
   "dependencies": {
     "vue": "^3.5.13",
