--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && npm run deploy:move",
-    "deploy:move": "xcopy dist\\* . /s /e /y && git add . && git commit -m 'Deploy to GitHub Pages' && git push origin main"
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.5.13",
