--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "gh-pages": "^5.0.0",
     "unplugin-vue-components": "^0.27.4",
+    "prettier": "^2.0.0",
     "vite": "^5.4.10"
   }
 }
