--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "homepage": "https://ntp-md.github.io/Mod-Vite",
   "name": "mod-vite",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
+  "homepage": "https://ntp-md.github.io/Mod-Vite",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist",
+    "lint": "eslint . --ext .js,.vue",
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "dependencies": {
     "vue": "^3.5.13",
@@ -18,7 +21,11 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "gh-pages": "^5.0.0",
     "unplugin-vue-components": "^0.27.4",
+    "vite": "^5.4.10",
+    "eslint": "^8.0.0",
     "prettier": "^2.0.0",
-    "vite": "^5.4.10"
+    "jest": "^29.0.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "eslint-config-prettier": "^8.0.0"
   }
 }
