--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "gh-pages": "^5.0.0",
-    "unplugin-vue-components": "^0.27.4",
-    "vite": "^5.4.10",
     "eslint": "^8.0.0",
-    "prettier": "^2.0.0",
-    "jest": "^29.0.0",
+    "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-vue": "^9.0.0",
-    "eslint-config-prettier": "^8.0.0"
+    "gh-pages": "^5.0.0",
+    "jest": "^29.0.0",
+    "prettier": "^2.8.8",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^5.4.10"
   }
 }
