--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "compression": "^1.8.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.0.0",
+    "express": "^5.1.0",
     "gh-pages": "^5.0.0",
     "jest": "^29.0.0",
     "prettier": "^2.8.8",
