--- a/SSR/package.json
+++ b/SSR/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "ssr",
+  "name": "promo-backend",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0"
-  },
-  "devDependencies": {}
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
+  }
 }
