--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy": "npm run build && gh-pages -d dist",
     "lint": "eslint . --ext .js,.vue",
     "format": "prettier --write .",
-    "test": "jest"
+    "test": "vitest"
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -20,14 +20,17 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/test-utils": "^2.4.6",
     "compression": "^1.8.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.0.0",
     "express": "^5.1.0",
     "gh-pages": "^5.0.0",
     "jest": "^29.0.0",
+    "jsdom": "^26.1.0",
     "prettier": "^2.8.8",
     "unplugin-vue-components": "^0.27.4",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "vitest": "^1.6.0"
   }
 }
