--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "papaparse": "^5.5.3",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
