--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "axios": "^1.11.0",
     "papaparse": "^5.5.3",
+    "pinia": "^3.0.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
